[gd_scene load_steps=10 format=3 uid="uid://kjtk0whpobva"]

[ext_resource type="Theme" uid="uid://xbaauqu77y27" path="res://resources/map_popup_menu.tres" id="1_rg7jx"]
[ext_resource type="Theme" uid="uid://bndkslnqff03v" path="res://resources/main_menu.tres" id="1_yo5ie"]
[ext_resource type="Script" path="res://menus/level_selection/level_selection.gd" id="2_a4n2b"]
[ext_resource type="Texture2D" uid="uid://bjiyrb7l3c570" path="res://assets/images/backgrounds/main_menu_background.jpg" id="3_cngd4"]
[ext_resource type="Texture2D" uid="uid://u244e4h8igqx" path="res://assets/icon.svg" id="12_6gc7v"]

[sub_resource type="InputEventKey" id="InputEventKey_0lgvy"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_l246c"]
events = [SubResource("InputEventKey_0lgvy")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c68rl"]
bg_color = Color(0, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qy0bl"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="LevelsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yo5ie")
script = ExtResource("2_a4n2b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cngd4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -99.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_rg7jx")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="MarginContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_l246c")
text = "< Back"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="ButtonVBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="PlaceholderButton" type="Button" parent="MarginContainer2/MarginContainer/ScrollContainer/ButtonVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "** placeholder **"

[node name="MapListPanelContainer" type="PanelContainer" parent="MarginContainer2"]
visible = false
layout_mode = 2

[node name="PreviewPanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 323.0
offset_top = 62.0
offset_right = 1048.0
offset_bottom = 562.0

[node name="level_preview_image" type="TextureRect" parent="PreviewPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("12_6gc7v")
expand_mode = 1

[node name="LoadLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 592.0
offset_right = 1045.0
offset_bottom = 651.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_c68rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_qy0bl")
text = "PLAY"

[node name="CurrentLevelNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 331.0
offset_top = 565.0
offset_right = 473.0
offset_bottom = 588.0
text = "level_name"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "SELECT_LEVEL"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LoadLevelButton" to="." method="_on_load_level_button_pressed"]
